GS-7702 Fixed: When the search text wraps, the map gets pushed down, covering the key (legend)

--- a/src/webapp/res/css/widget/schoolSearchWidget.css
+++ b/src/webapp/res/css/widget/schoolSearchWidget.css
@@ -100,7 +100,6 @@ div#mapTabBody {
 
     div#mapTabBody div.locationDescription {
         font-size: 12px;
-        width: 250px;
     }
 
         div#mapTabBody div.locationDescription span {
